AC_PREREQ(2.50)
AC_INIT(smartPerf.cc)

AC_PREFIX_DEFAULT(/usr/local/)

AC_CHECK_HEADER([stdio.h],
                     [AC_DEFINE([HAVE_STDIO_H], [1],
                        [Define to 1 if you have <stdio.h>.])],
                     [AC_MSG_ERROR([Sorry, can't do anything for you])])

AC_OUTPUT(Makefile)
